kustomize/kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka
  namespace: kafka
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: kafka
    app.kubernetes.io/managed-by: flux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: tcp
spec:
  tls:
  - hosts:
    - kafka.stillon.top
    secretName: kafka-tls
  rules:
  - host: kafka.stillon.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka
            port:
              number: 9092
